--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "react-redux": "^7.1.0",
     "react-scripts": "3.0.1",
     "redux": "^3.3.1",
+    "redux-actions": "^2.6.5",
     "redux-saga": "^0.15.0"
   },
   "scripts": {
