--- a/package.json
+++ b/package.json
@@ -6,13 +6,18 @@
     "@material-ui/core": "^4.3.2",
     "@material-ui/icons": "^4.2.1",
     "@material-ui/styles": "^4.3.0",
+    "@types/jest": "^24.0.18",
+    "@types/node": "^12.7.2",
+    "@types/react": "^16.9.2",
+    "@types/react-dom": "^16.9.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-redux": "^7.1.0",
     "react-scripts": "3.0.1",
     "redux": "^3.3.1",
     "redux-actions": "^2.6.5",
-    "redux-saga": "^0.15.0"
+    "redux-saga": "^0.15.0",
+    "typescript": "^3.5.3"
   },
   "scripts": {
     "start": "react-scripts start",
